deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: environmentconverter
  name: environmentconverter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: environmentconverter
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: environmentconverter
    spec:
      containers:
      - image: davutozcan/environmentconverter:3
        name: environmentconverter
        resources: {}
      imagePullSecrets:
        - name: registry-dwt-development
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: environmentconverter
  name: environmentconverter
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: environmentconverter
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: environmentconverter
  annotations:
    external-dns.alpha.kubernetes.io/hostname: environmentconverter.davutozcan.com
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - environmentconverter.davutozcan.com
      secretName: environmentconverter
  rules:
    - host: environmentconverter.davutozcan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: environmentconverter
                port:
                  number: 80
